--- a/examples/rest/public/index.html
+++ b/examples/rest/public/index.html
@@ -74,12 +74,13 @@
         var ele = document.getElementsByName('method');
         var mtd = document.querySelector('input[name="method"]:checked').value.toUpperCase()
 
+        var startTime = performance.now();
         function reqListener() {
           var s = document.querySelector("#status");
           s.value += ' ' + this.status + " " + this.statusText;
           //var unescaped = decodeURIComponent(JSON.parse(this.responseText).result);
           document.querySelector("#result").value = this.responseText;
-          //console.log("this", this)
+          console.log("this", this)
           if(this.status == 200){
             histadd();
             s.style.backgroundColor = "rgb(240,255,240)";
@@ -88,6 +89,9 @@
           }
           const evt = new Event("input");
           document.querySelector("#result").dispatchEvent(evt);
+          var endTime = performance.now();
+          var timeElapsed = endTime - startTime;
+          s.value += " " + timeElapsed.toFixed(2) + 'ms'
         }
 
         function reqProgress(e) {
